[gd_scene load_steps=33 format=2]

[ext_resource path="res://Tiles/keyYellow.png" type="Texture" id=1]
[ext_resource path="res://player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Tiles/iceBlock.png" type="Texture" id=3]
[ext_resource path="res://Level2.gd" type="Script" id=4]
[ext_resource path="res://Tiles/combined.png" type="Texture" id=5]
[ext_resource path="res://Key2.gd" type="Script" id=6]
[ext_resource path="res://IglooDoor2.gd" type="Script" id=7]
[ext_resource path="res://RescuedAlly.gd" type="Script" id=8]
[ext_resource path="res://Tiles/iglooDoor.png" type="Texture" id=9]
[ext_resource path="res://Tiles/iceBlockHalf.png" type="Texture" id=10]
[ext_resource path="res://Tiles/tundraHillRight.png" type="Texture" id=11]
[ext_resource path="res://Tiles/tundraHillLeft.png" type="Texture" id=12]
[ext_resource path="res://Tiles/donuk yolculuk sahne 2 yani final sahnesinin arka planı.png" type="Texture" id=13]
[ext_resource path="res://IgloDoor3.gd" type="Script" id=14]
[ext_resource path="res://sounds/wind-blowing-sfx-01-423673.mp3" type="AudioStream" id=15]
[ext_resource path="res://sounds/llaveskeys-338166.mp3" type="AudioStream" id=16]
[ext_resource path="res://sounds/opening-door-411632.mp3" type="AudioStream" id=17]

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 64, 0, 64, 32, 0, 32 )

[sub_resource type="OccluderPolygon2D" id=7]
polygon = PoolVector2Array( 0, 0, 0, 64, 64, 64 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0 )

[sub_resource type="OccluderPolygon2D" id=8]
polygon = PoolVector2Array( 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=4]
0/name = "iceBlock.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 11 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "iceBlockHalf.png 1"
1/texture = ExtResource( 10 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 6 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
3/name = "tundraHillRight.png 3"
3/texture = ExtResource( 11 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/occluder = SubResource( 7 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 9 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "tundraHillLeft.png 4"
4/texture = ExtResource( 12 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/occluder = SubResource( 8 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 10 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27, 21 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 35, 36.0607 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 35, 35.5303 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25.75, 32.25 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 26.5, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13.5, 31.25 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 73.9375, 21.5 )

[node name="Level2" type="Node2D"]
script = ExtResource( 4 )

[node name="DonukYolculukSahne2YaniFinalSahnesininArkaPlanı" type="Sprite" parent="."]
visible = false
position = Vector2( 911.5, 514 )
scale = Vector2( 1.58008, 1.40625 )
texture = ExtResource( 13 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 625, 429 )
tile_set = SubResource( 4 )
format = 1
tile_data = PoolIntArray( -458763, 0, 0, -458762, 0, 0, -458761, 0, 0, -458760, 0, 0, -458759, 0, 0, -458758, 0, 0, -458757, 0, 0, -458756, 0, 0, -458755, 0, 0, -458754, 0, 0, -458753, 0, 0, -524288, 0, 0, -524287, 0, 0, -524286, 0, 0, -524285, 0, 0, -524284, 0, 0, -524283, 0, 0, -524282, 0, 0, -524281, 0, 0, -524280, 0, 0, -524279, 0, 0, -524278, 0, 0, -524277, 0, 0, -524276, 0, 0, -524275, 0, 0, -524274, 0, 0, -524273, 0, 0, -524272, 0, 0, -524271, 0, 0, -524270, 0, 0, -524269, 0, 0, -524268, 0, 0, -393227, 0, 0, -458732, 0, 0, -327691, 0, 0, -393196, 0, 0, -262155, 0, 0, -327660, 0, 0, -196619, 0, 0, -196612, 0, 0, -262142, 0, 0, -262141, 0, 0, -262140, 0, 0, -262124, 0, 0, -131083, 0, 0, -131077, 0, 0, -131076, 0, 0, -131075, 0, 0, -196607, 0, 0, -196603, 0, 0, -196588, 0, 0, -65548, 0, 0, -65547, 0, 0, -65542, 0, 0, -65538, 0, 0, -131072, 0, 0, -131066, 0, 0, -131052, 0, 0, -131051, 0, 0, -12, 0, 0, -7, 0, 0, -1, 0, 0, -65529, 0, 0, -65515, 0, 0, 65524, 0, 0, 65528, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 21, 0, 0, 131060, 0, 0, 131061, 0, 0, 131062, 0, 0, 131063, 3, 0, 65555, 4, 0, 65556, 0, 0, 65557, 0, 0, 196597, 0, 0, 196598, 0, 0, 196599, 0, 0, 196600, 3, 0, 131090, 4, 0, 131091, 0, 0, 131092, 0, 0, 262133, 0, 0, 262134, 0, 0, 262135, 0, 0, 262136, 0, 0, 262137, 3, 0, 196625, 4, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 327669, 0, 0, 327670, 0, 0, 327671, 0, 0, 327672, 0, 0, 327673, 0, 0, 327674, 3, 0, 262160, 4, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 393205, 0, 0, 393206, 1, 0, 393207, 1, 0, 393208, 1, 0, 393209, 1, 0, 393210, 1, 0, 393211, 1, 0, 393212, 1, 0, 393213, 1, 0, 393214, 1, 0, 393215, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 0, 0, 327688, 3, 0, 327695, 4, 0, 327696, 0, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 327700, 0, 0, 458741, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 3, 0, 393230, 4, 0, 393231, 0, 0, 393232, 0, 0, 393236, 0, 0, 524277, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 3, 0, 458765, 4, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458772, 0, 0, 589813, 0, 0, 524308, 0, 0, 655349, 0, 0, 655350, 1, 0, 655351, 1, 0, 655352, 1, 0, 655353, 1, 0, 655354, 1, 0, 655355, 1, 0, 655356, 1, 0, 655357, 1, 0, 655358, 1, 0, 655359, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 589844, 0, 0, 720885, 0, 0, 655380, 0, 0, 786421, 0, 0, 786422, 0, 0, 786423, 0, 0, 786424, 0, 0, 786425, 0, 0, 786426, 0, 0, 786427, 0, 0, 786428, 0, 0, 786429, 0, 0, 786430, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0 )

[node name="Key2" type="Area2D" parent="."]
position = Vector2( 195, 680 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Key2"]
position = Vector2( 398, -341 )
shape = SubResource( 1 )

[node name="Key2" type="Sprite" parent="Key2"]
position = Vector2( 396, -341 )
scale = Vector2( 0.683594, 0.625 )
texture = ExtResource( 1 )

[node name="key" type="AudioStreamPlayer2D" parent="Key2"]
stream = ExtResource( 16 )
volume_db = -10.0

[node name="IgloDoor3" type="Area2D" parent="."]
position = Vector2( 1689, 974 )
scale = Vector2( 0.685714, 0.942857 )
script = ExtResource( 14 )

[node name="IgloDoor3" type="Sprite" parent="IgloDoor3"]
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="IgloDoor3"]
position = Vector2( 0, -0.00012207 )
shape = SubResource( 13 )

[node name="Blocker" type="StaticBody2D" parent="IgloDoor3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="IgloDoor3/Blocker"]
position = Vector2( 0, 0.530151 )
shape = SubResource( 14 )

[node name="Door" type="AudioStreamPlayer2D" parent="IgloDoor3"]
stream = ExtResource( 17 )

[node name="IglooDoor2" type="Area2D" parent="."]
position = Vector2( 30, 158 )
script = ExtResource( 7 )

[node name="IglooDoor2" type="Sprite" parent="IglooDoor2"]
position = Vector2( -10, 815 )
scale = Vector2( 0.750001, 0.914285 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="IglooDoor2"]
position = Vector2( -10, 816 )
shape = SubResource( 2 )

[node name="ExitArea" type="Area2D" parent="IglooDoor2"]
position = Vector2( 0, 836 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="IglooDoor2/ExitArea"]
position = Vector2( -9, -20.0001 )
shape = SubResource( 17 )

[node name="Door" type="AudioStreamPlayer2D" parent="IglooDoor2"]
stream = ExtResource( 17 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 547, 137 )
scale = Vector2( 1.49609, 1.15234 )

[node name="RescuedAlly" type="KinematicBody2D" parent="."]
position = Vector2( 760, 794 )
script = ExtResource( 8 )

[node name="RescuedAlly" type="Sprite" parent="RescuedAlly"]
position = Vector2( 1083, 185 )
scale = Vector2( 0.365386, 0.227273 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RescuedAlly"]
position = Vector2( 1083, 182 )
shape = SubResource( 3 )

[node name="DetectionArea" type="Area2D" parent="RescuedAlly"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RescuedAlly/DetectionArea"]
position = Vector2( 1042.06, 189.5 )
shape = SubResource( 16 )

[node name="Ambience" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
autoplay = true

[connection signal="body_entered" from="RescuedAlly/DetectionArea" to="RescuedAlly" method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="RescuedAlly/DetectionArea" to="RescuedAlly" method="_on_DetectionArea_body_exited"]
